# evaluacion-estrellas

./: Cargo.toml  README.md  cliente.sh  contratos.txt  git.info  wallet.pem  wallet1.txt
meta/: Cargo.toml
meta/src/: main.rs
output/: evaluacion-estrellas.abi.json  evaluacion-estrellas.mxsc.json  evaluacion-estrellas.wasm
src/: evaluacion_estrellas.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
